feat: автоматическое открытие раскрывающихся списков при переходе из секции услуг

--- a/src/index.html
+++ b/src/index.html
@@ -230,7 +230,7 @@
       </div>
       <div class="prices__type-work">
         <button class="prices__title" id="transmission">
-          Трансмиссия и КПП
+          КПП и трансмиссия
           <div class="prices__title-check"></div>
         </button>
         <div class="prices__table-container">
