--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                 <a href="#promotions" class="navigation__link">АКЦИИ</a>
               </li>
               <li>
-                <a href="#blog" class="navigation__link">БЛОГ</a>
+                <a href="#work" class="navigation__link">РАБОТЫ</a>
               </li>
               <li>
                 <a href="#contacts" class="navigation__link">КОНТАКТЫ</a>
@@ -68,7 +68,7 @@
     </div>
   </header>
   <main class="main" id="start">
-    <h1 class="main__title">Добро пожаловать в автосервис BGP&nbsp;AUTO!</h1>
+    <!-- <h1 class="main__title">Добро пожаловать в автосервис BGP&nbsp;AUTO!</h1> -->
     <div class="main__background"></div>
     <!-- <section class="greetings">
       <div class="greetings__title-container">
@@ -130,7 +130,7 @@
         </ul>
       </div>
     </section> -->
-    <section class="services" aria-label="Наши основные услуги" id="services">
+    <!-- <section class="services" aria-label="Наши основные услуги" id="services">
       <h2 class="section__title">НАШИ УСЛУГИ</h2>
       <div class="services__container">
         <div class="services__grid">
@@ -299,8 +299,8 @@
           </ul>
         </div>
       </div>
-    </section>
-    <section class="promotions" aria-label="Наши акционные предложения" id="promotions">
+    </section> -->
+    <!-- <section class="promotions" aria-label="Наши акционные предложения" id="promotions">
       <h2 class="section__title">АКЦИИ</h2>
       <ul class="list">
         <li class="list__item">
@@ -341,121 +341,141 @@
           </div>
         </li>
       </ul>
-    </section>
-    <section class="blog" aria-label="Фото и описание наших работ" id="blog">
+    </section> -->
+    <section class="work" aria-label="Фото и описание наших работ" id="work">
       <h2 class="section__title">НАШИ РАБОТЫ</h2>
-      <ul class="list">
-        <li class="list__item">
-          <img class="list__item-image" src="./images/blog-image-1.jpg" alt="Volkswagen Polo 1.6">
-          <h3 class="list__item-title">Volkswagen Polo 1.6</h3>
-          <div class="list__item-description">
-            <p class="list__item-text">Клиент жаловался на то что не срабатывал вентилятор охлаждения двигателя и не
-              было зарядки от генератора, ранее автомобиль попадал в ДТП.</p>
-            <p class="list__item-text">После диагностики был выявлен участок электропроводки который имел неисправности
-              в виде обрыва проводов. Выполнив ремонт, мы убедились в работоспособности всех узлов, клиент доволен!</p>
-          </div>
-        </li>
-        <li class="list__item">
-          <img class="list__item-image" src="./images/blog-image-2.jpg" alt="Volkswagen Polo">
-          <h3 class="list__item-title">Volkswagen Polo</h3>
-          <div class="list__item-description">
-            <p class="list__item-text">Частая проблема - люфт в рулевой рейке справа.</p>
-            <p class="list__item-text">Установили ремкомплект втулок для рулевых реек.</p>
-            <p class="list__item-text">Заменили задние амортизаторы.</p>
-          </div>
-        </li>
-        <li class="list__item">
-          <img class="list__item-image" src="./images/blog-image-3.jpg" alt="Toyota Avensis 1.8">
-          <h3 class="list__item-title">Toyota Avensis 1.8</h3>
-          <div class="list__item-description">
-            <p class="list__item-text">Выполнили плановое техническое обслуживание!</p>
-            <p class="list__item-text">Перед заменой масла выполнили раскосковку двигателя, так как клиент жаловался на
-              небольшой расход масла.</p>
-            <p class="list__item-text">Заменили масло, фильтра, осмотрели ходовую часть, есть недочеты, будем устранять.
-            </p>
-          </div>
-        </li>
-        <li class="list__item">
-          <img class="list__item-image" src="./images/blog-image-4.jpg" alt="Skoda Fabia 1.2">
-          <h3 class="list__item-title">Skoda Fabia 1.2</h3>
-          <div class="list__item-description">
-            <p class="list__item-text">Заменили комплект цепи ГРМ.</p>
-            <p class="list__item-text">Напоминаем вам, что не стоит игнорировать посторонние звуки при запуске двигателя
-              после долгой стоянки, так как чаще всего это признак растянутой цепи.</p>
-            <p class="list__item-text">Эксплуатация автомобиля с такой неисправностью может привести к дорогостоящему
-              ремонту.</p>
-          </div>
-        </li>
-        <li class="list__item">
-          <img class="list__item-image" src="./images/blog-image-5.jpg" alt="Skoda Octavia">
-          <h3 class="list__item-title">Skoda Octavia</h3>
-          <div class="list__item-description">
-            <p class="list__item-text">Диагностика ходовой части с последующей заменой рулевого наконечника.</p>
-          </div>
-        </li>
-        <li class="list__item">
-          <img class="list__item-image" src="./images/blog-image-6.jpg" alt="Skoda Octavia">
-          <h3 class="list__item-title">Skoda Octavia</h3>
-          <div class="list__item-description">
-            <p class="list__item-text">Замена насоса ОЖ и его ремня.</p>
-          </div>
-        </li>
-        <li class="list__item">
-          <img class="list__item-image" src="./images/blog-image-7.jpg" alt="Audi A4">
-          <h3 class="list__item-title">Audi A4</h3>
-          <div class="list__item-description">
-            <p class="list__item-text">Замена опор двигателя и передних наружных ШРУСов.</p>
-          </div>
-        </li>
-        <li class="list__item">
-          <img class="list__item-image" src="./images/blog-image-8.jpg" alt="Mazda CX-7">
-          <h3 class="list__item-title">Mazda CX-7</h3>
-          <div class="list__item-description">
-            <p class="list__item-text">Клиента беспокоит повышенный расход масла и сизый дым из выхлопной трубы.</p>
-            <p class="list__item-text">Для начала проверили состояние турбокомпрессора, а затем заглянули в цилиндры
-              эндоскопом.</p>
-            <p class="list__item-text">Множественные задиры на цилиндрах говорят о том что требуется капитальный ремонт
-              двигателя.</p>
-          </div>
-        </li>
-        <li class="list__item">
-          <img class="list__item-image" src="./images/blog-image-9.jpg" alt="Audi A5">
-          <h3 class="list__item-title">Audi A5</h3>
-          <div class="list__item-description">
-            <p class="list__item-text">Клиента беспокоил стук в задней части автомобиля в холодную погоду.</p>
-            <p class="list__item-text">Задефектовали задние амортизаторы.</p>
-            <p class="list__item-text">Подобрали, заказали и установили новые.</p>
-          </div>
-        </li>
-        <li class="list__item">
-          <img class="list__item-image" src="./images/blog-image-10.jpg" alt="Volkswagen Touareg">
-          <h3 class="list__item-title">Volkswagen Touareg</h3>
-          <div class="list__item-description">
-            <p class="list__item-text">Замена пыльников передних наружных ШРУСов, пыльника шаровой нижнего рычага и
-              передних тормозных колодок.</p>
-          </div>
-        </li>
-        <li class="list__item">
-          <img class="list__item-image" src="./images/blog-image-11.jpg" alt="Skoda Fabia">
-          <h3 class="list__item-title">Skoda Fabia</h3>
-          <div class="list__item-description">
-            <p class="list__item-text">Приехала на замену масла ДВС и фильтров.</p>
-            <p class="list__item-text">После нашего осмотра было решено мыть систему охлаждения и отопитель салона,
-              менять передние амортизаторы с опорами и передний сальник коленвала.</p>
-            <p class="list__item-text">Подобрали запчасти по выгодным ценам и произвели данные работы.</p>
-          </div>
-        </li>
-        <li class="list__item">
-          <img class="list__item-image" src="./images/blog-image-12.jpg" alt="Skoda Octavia">
-          <h3 class="list__item-title">Skoda Octavia</h3>
-          <div class="list__item-description">
-            <p class="list__item-text">Осмотр ходовой и поиск утечки ОЖ.</p>
-            <p class="list__item-text">В ходе осмотра выявлено: люфт тяг переднего стабилизатора, негерметичность насоса
-              ОЖ.</p>
-            <p class="list__item-text">Произвели замену тяг переднего стабилизатора, заказали насос ОЖ.</p>
-          </div>
-        </li>
-      </ul>
+      <div class="work-container">
+        <button class="work-button work-button_prev"></button>
+        <div class="work-list-container">
+          <ul class="work-list">
+            <li class="work-list__item">
+              <img class="work-list__item-image" src="./images/work-image-1.jpg" alt="Volkswagen Polo 1.6">
+              <h3 class="work-list__item-title">Volkswagen Polo 1.6</h3>
+              <div class="work-list__item-description">
+                <p class="work-list__item-text">Клиент жаловался на то что не срабатывал вентилятор охлаждения двигателя
+                  и
+                  не было зарядки от генератора.</p>
+                <p class="work-list__item-text">После диагностики выявили участок электропроводки который имел
+                  обрыв. Выполнили ремонт и убедились в работоспособности всех узлов, клиент доволен!
+                </p>
+              </div>
+            </li>
+            <li class="work-list__item">
+              <img class="work-list__item-image" src="./images/work-image-2.jpg" alt="Volkswagen Polo">
+              <h3 class="work-list__item-title">Volkswagen Polo</h3>
+              <div class="work-list__item-description">
+                <p class="work-list__item-text">Частая проблема - люфт в рулевой рейке справа.</p>
+                <p class="work-list__item-text">Установили ремкомплект втулок для рулевых реек.</p>
+                <p class="work-list__item-text">Заменили задние амортизаторы.</p>
+              </div>
+            </li>
+            <li class="work-list__item">
+              <img class="work-list__item-image" src="./images/work-image-3.jpg" alt="Toyota Avensis 1.8">
+              <h3 class="work-list__item-title">Toyota Avensis 1.8</h3>
+              <div class="work-list__item-description">
+                <p class="work-list__item-text">Выполнили плановое техническое обслуживание!</p>
+                <p class="work-list__item-text">Перед заменой масла выполнили раскосковку двигателя, так как клиент
+                  жаловался на расход масла.</p>
+                <p class="work-list__item-text">Заменили масло, фильтра, осмотрели ходовую часть, есть недочеты, будем
+                  устранять.
+                </p>
+              </div>
+            </li>
+            <li class="work-list__item">
+              <img class="work-list__item-image" src="./images/work-image-4.jpg" alt="Skoda Fabia 1.2">
+              <h3 class="work-list__item-title">Skoda Fabia 1.2</h3>
+              <div class="work-list__item-description">
+                <p class="work-list__item-text">Заменили комплект цепи ГРМ.</p>
+                <p class="work-list__item-text">Напоминаем, не стоит игнорировать посторонние звуки при запуске
+                  двигателя, так как чаще всего это признак растянутой цепи.</p>
+                <p class="work-list__item-text">Эксплуатация автомобиля с такой неисправностью может привести к
+                  дорогостоящему
+                  ремонту.</p>
+              </div>
+            </li>
+            <li class="work-list__item">
+              <img class="work-list__item-image" src="./images/work-image-5.jpg" alt="Skoda Octavia">
+              <h3 class="work-list__item-title">Skoda Octavia</h3>
+              <div class="work-list__item-description">
+                <p class="work-list__item-text">Диагностика ходовой части с последующей заменой рулевого наконечника.
+                </p>
+              </div>
+            </li>
+            <li class="work-list__item">
+              <img class="work-list__item-image" src="./images/work-image-6.jpg" alt="Skoda Octavia">
+              <h3 class="work-list__item-title">Skoda Octavia</h3>
+              <div class="work-list__item-description">
+                <p class="work-list__item-text">Замена насоса охлаждающей жидкости и его ремня.</p>
+              </div>
+            </li>
+            <li class="work-list__item">
+              <img class="work-list__item-image" src="./images/work-image-7.jpg" alt="Audi A4">
+              <h3 class="work-list__item-title">Audi A4</h3>
+              <div class="work-list__item-description">
+                <p class="work-list__item-text">Замена опор двигателя и передних наружных ШРУСов.</p>
+              </div>
+            </li>
+            <li class="work-list__item">
+              <img class="work-list__item-image" src="./images/work-image-8.jpg" alt="Mazda CX-7">
+              <h3 class="work-list__item-title">Mazda CX-7</h3>
+              <div class="work-list__item-description">
+                <p class="work-list__item-text">Клиента беспокоил повышенный расход масла и сизый дым из выхлопной
+                  трубы.
+                </p>
+                <p class="work-list__item-text">Проверили состояние турбокомпрессора и заглянули в
+                  цилиндры
+                  эндоскопом.</p>
+                <p class="work-list__item-text">Множественные задиры на цилиндрах говорят о том что требуется
+                  капитальный
+                  ремонт
+                  двигателя.</p>
+              </div>
+            </li>
+            <li class="work-list__item">
+              <img class="work-list__item-image" src="./images/work-image-9.jpg" alt="Audi A5">
+              <h3 class="work-list__item-title">Audi A5</h3>
+              <div class="work-list__item-description">
+                <p class="work-list__item-text">Клиента беспокоил стук в задней части автомобиля в холодную погоду.</p>
+                <p class="work-list__item-text">Задефектовали задние амортизаторы.</p>
+                <p class="work-list__item-text">Подобрали, заказали и установили новые.</p>
+              </div>
+            </li>
+            <li class="work-list__item">
+              <img class="work-list__item-image" src="./images/work-image-10.jpg" alt="Volkswagen Touareg">
+              <h3 class="work-list__item-title">Volkswagen Touareg</h3>
+              <div class="work-list__item-description">
+                <p class="work-list__item-text">Замена пыльников передних наружных ШРУСов, пыльника шаровой нижнего
+                  рычага
+                  и
+                  передних тормозных колодок.</p>
+              </div>
+            </li>
+            <li class="work-list__item">
+              <img class="work-list__item-image" src="./images/work-image-11.jpg" alt="Skoda Fabia">
+              <h3 class="work-list__item-title">Skoda Fabia</h3>
+              <div class="work-list__item-description">
+                <p class="work-list__item-text">Замена масла ДВС и фильтров.</p>
+                <p class="work-list__item-text">Помыли систему охлаждения и отопитель
+                  салона, поменяли передние амортизаторы с опорами и передний сальник коленвала.</p>
+                <p class="work-list__item-text">Запчасти подобрали по выгодным ценам.</p>
+              </div>
+            </li>
+            <li class="work-list__item">
+              <img class="work-list__item-image" src="./images/work-image-12.jpg" alt="Skoda Octavia">
+              <h3 class="work-list__item-title">Skoda Octavia</h3>
+              <div class="work-list__item-description">
+                <p class="work-list__item-text">Осмотр ходовой и поиск утечки ОЖ.</p>
+                <p class="work-list__item-text">В ходе осмотра выявили люфт тяг переднего стабилизатора и
+                  негерметичность
+                  насоса
+                  ОЖ.</p>
+                <p class="work-list__item-text">Произвели замену тяг, заказали насос ОЖ.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <button class="work-button work-button_next"></button>
+      </div>
     </section>
     <section class="contacts" aria-label="Наши контакты" id="contacts">
       <h2 class="section__title">КОНТАКТЫ</h2>
