feat: улучшить адаптивность в карусели на мобильной версии

--- a/src/index.html
+++ b/src/index.html
@@ -68,9 +68,9 @@
     </div>
   </header>
   <main class="main" id="start">
-    <!-- <h1 class="main__title">Добро пожаловать в автосервис BGP&nbsp;AUTO!</h1> -->
+    <h1 class="main__title">Добро пожаловать в автосервис BGP&nbsp;AUTO!</h1>
     <div class="main__background"></div>
-    <!-- <section class="greetings">
+    <section class="greetings">
       <div class="greetings__title-container">
         <div class="greetings__title-icon greetings__title-icon_red"></div>
         <h3 class="greetings__title-text">Ремонт и обслуживание<br />автомобилей VAG группы более 5 лет</h3>
@@ -129,8 +129,8 @@
           </li>
         </ul>
       </div>
-    </section> -->
-    <!-- <section class="services" aria-label="Наши основные услуги" id="services">
+    </section>
+    <section class="services" aria-label="Наши основные услуги" id="services">
       <h2 class="section__title">НАШИ УСЛУГИ</h2>
       <div class="services__container">
         <div class="services__grid">
@@ -299,8 +299,8 @@
           </ul>
         </div>
       </div>
-    </section> -->
-    <!-- <section class="promotions" aria-label="Наши акционные предложения" id="promotions">
+    </section>
+    <section class="promotions" aria-label="Наши акционные предложения" id="promotions">
       <h2 class="section__title">АКЦИИ</h2>
       <ul class="list">
         <li class="list__item">
@@ -341,7 +341,7 @@
           </div>
         </li>
       </ul>
-    </section> -->
+    </section>
     <section class="work" aria-label="Фото и описание наших работ" id="work">
       <h2 class="section__title">НАШИ РАБОТЫ</h2>
       <div class="work-container">
@@ -512,14 +512,14 @@
         </ul>
       </div>
     </section>
-    <!-- <section class="map" aria-label="Карта с нашим местоположением и маршрутом подъезда" id="map">
+    <section class="map" aria-label="Карта с нашим местоположением и маршрутом подъезда" id="map">
       <h2 class="section__title">СХЕМА ПРОЕЗДА</h2>
       <div class="map__container">
         <iframe class="map__iframe"
           src="https://yandex.ru/map-widget/v1/?um=constructor%3Af18f2eea116729dbc3556794464d62904adf8e51d636984e93f675d2d8e12216&amp;source=constructor"></iframe>
         <h3 class="map__title">Будем рады видеть Вас!</h3>
       </div>
-    </section> -->
+    </section>
     <a class="button-up button-up_is-hidden" href="#start"></a>
   </main>
   <footer class="footer">
