feat: улучшить стили отступов между заголовками и секциями

--- a/src/index.html
+++ b/src/index.html
@@ -514,12 +514,13 @@
     </section>
     <section class="map" aria-label="Карта с нашим местоположением и маршрутом подъезда" id="map">
       <h2 class="section__title">СХЕМА ПРОЕЗДА</h2>
+      <h3 class="map__title">Адрес: г.&nbsp;Челябинск, ул.&nbsp;Монтажников,&nbsp;1/3 (ЧМЗ)</h3>
       <div class="map__container">
         <iframe class="map__iframe"
           src="https://yandex.ru/map-widget/v1/?um=constructor%3Af18f2eea116729dbc3556794464d62904adf8e51d636984e93f675d2d8e12216&amp;source=constructor"></iframe>
-        <h3 class="map__title">Будем рады видеть Вас!</h3>
       </div>
     </section>
+    <h2 class="main__title">Будем рады видеть Вас!</h2>
     <a class="button-up button-up_is-hidden" href="#start"></a>
   </main>
   <footer class="footer">
