feat: добавить отображение телефонов в контактах

--- a/src/index.html
+++ b/src/index.html
@@ -491,7 +491,7 @@
             <p class="contacts__job">моторист</p>
             <a href="https://vk.com/ibasalygin" target="_blank" rel="noreferrer" class="contacts__connection">Сообщение
               в VK</a>
-            <div class="contacts__connection" id="1">+7 (951) 814-96-59 Показать телефон</div>
+            <div class="contacts__connection contacts__connection_basalygin">Показать телефон</div>
           </li>
           <li class="contacts__master">
             <img class="contacts__photo" src="./images/master-goncharov.jpg" alt="Гончаров Дмитрий, механик" />
@@ -499,7 +499,7 @@
             <p class="contacts__job">механик</p>
             <a href="https://vk.com/dimagonchrov" target="_blank" rel="noreferrer"
               class="contacts__connection">Сообщение в VK</a>
-            <div class="contacts__connection" id="2">+7 (982) 114-11-94 : Показать телефон</div>
+            <div class="contacts__connection contacts__connection_goncharov">Показать телефон</div>
           </li>
           <li class="contacts__master">
             <img class="contacts__photo" src="./images/master-plisovskikh.jpg" alt="Плисовских Алексей, диагност" />
@@ -507,7 +507,7 @@
             <p class="contacts__job">диагност</p>
             <a href="https://vk.com/shifer96" target="_blank" rel="noreferrer" class="contacts__connection">Сообщение в
               VK</a>
-            <div class="contacts__connection" id="3">+7 (902) 605-47-42 Показать телефон</div>
+            <div class="contacts__connection contacts__connection_plisovskikh">Показать телефон</div>
           </li>
         </ul>
       </div>
