feat: сделать lazy loading для картинок и айфрейма

--- a/src/index.html
+++ b/src/index.html
@@ -73,11 +73,11 @@
     <section class="greetings">
       <div class="greetings__title-container">
         <div class="greetings__title-icon greetings__title-icon_red"></div>
-        <h3 class="greetings__title-text">Ремонт и обслуживание<br />автомобилей VAG группы более 5 лет</h3>
+        <h3 class="greetings__title-text">Ремонт и обслуживание<br>автомобилей VAG группы более 5 лет</h3>
       </div>
       <div class="greetings__title-container">
         <div class="greetings__title-icon greetings__title-icon_black"></div>
-        <h3 class="greetings__title-text">Использование официальной технической<br />документации и специнструмента</h3>
+        <h3 class="greetings__title-text">Использование официальной технической<br>документации и специнструмента</h3>
       </div>
       <div class="greetings__title-container">
         <div class="greetings__title-icon greetings__title-icon_black"></div>
@@ -135,27 +135,27 @@
       <div class="services__container">
         <div class="services__grid">
           <a class="services__grid-item" href="#engine">
-            <img class="services__grid-img" src="./images/service-engine.png" alt="Ремонт двигателя" />
+            <img class="services__grid-img" src="./images/service-engine.png" alt="Ремонт двигателя">
             <div class="services__grid-circel"></div>
             <h3 class="services__grid-title">Ремонт двигателя</h3>
           </a>
           <a class="services__grid-item" href="#chassis">
-            <img class="services__grid-img" src="./images/service-chassis.png" alt="Ремонт ходовой" />
+            <img class="services__grid-img" src="./images/service-chassis.png" alt="Ремонт ходовой">
             <div class="services__grid-circel"></div>
             <h3 class="services__grid-title">Ремонт ходовой</h3>
           </a>
           <a class="services__grid-item" href="#transmission">
-            <img class="services__grid-img" src="./images/service-transmission.png" alt="Ремонт КПП" />
+            <img class="services__grid-img" src="./images/service-transmission.png" alt="Ремонт КПП">
             <div class="services__grid-circel"></div>
             <h3 class="services__grid-title">Ремонт КПП</h3>
           </a>
           <a class="services__grid-item" href="#to">
-            <img class="services__grid-img" src="./images/service-to.png" alt="Плановое ТО" />
+            <img class="services__grid-img" src="./images/service-to.png" alt="Плановое ТО">
             <div class="services__grid-circel"></div>
             <h3 class="services__grid-title">Плановое ТО</h3>
           </a>
           <a class="services__grid-item" href="#diagnostics">
-            <img class="services__grid-img" src="./images/service-diagnostics.png" alt="Диагностика" />
+            <img class="services__grid-img" src="./images/service-diagnostics.png" alt="Диагностика">
             <div class="services__grid-circel"></div>
             <h3 class="services__grid-title">Диагностика</h3>
           </a>
@@ -304,7 +304,7 @@
       <h2 class="section__title">АКЦИИ</h2>
       <ul class="list">
         <li class="list__item">
-          <img class="list__item-image" src="./images/promotions-car.jpg"
+          <img class="list__item-image" src="./images/promotions-car.jpg" loading="lazy"
             alt="Бесплатный подменный автомобиль на время ремонта">
           <h3 class="list__item-title">Бесплатный подменный автомобиль на время ремонта</h3>
           <div class="list__item-description">
@@ -317,7 +317,7 @@
           </div>
         </li>
         <li class="list__item">
-          <img class="list__item-image" src="./images/promotions-car-bottom.jpg"
+          <img class="list__item-image" src="./images/promotions-car-bottom.jpg" loading="lazy"
             alt="Бесплатный осмотр днища и ходовой части">
           <h3 class="list__item-title">Бесплатный осмотр днища и ходовой части</h3>
           <div class="list__item-description">
@@ -330,7 +330,7 @@
           </div>
         </li>
         <li class="list__item">
-          <img class="list__item-image" src="./images/promotions-oil.png" alt="Масло на 10% дешевле">
+          <img class="list__item-image" src="./images/promotions-oil.png" loading="lazy" alt="Масло на 10% дешевле">
           <h3 class="list__item-title">Масло на 10% дешевле</h3>
           <div class="list__item-description">
             <p class="list__item-text">Мы работаем напрямую с крупными дистрибьюторами моторных масел, поэтому можем
@@ -349,7 +349,7 @@
         <div class="work-list-container">
           <ul class="work-list">
             <li class="work-list__item">
-              <img class="work-list__item-image" src="./images/work-image-1.jpg" alt="Volkswagen Polo 1.6">
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-1.jpg" alt="Volkswagen Polo 1.6">
               <h3 class="work-list__item-title">Volkswagen Polo 1.6</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Клиент жаловался на то что не срабатывал вентилятор охлаждения двигателя
@@ -361,7 +361,7 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" src="./images/work-image-2.jpg" alt="Volkswagen Polo">
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-2.jpg" alt="Volkswagen Polo">
               <h3 class="work-list__item-title">Volkswagen Polo</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Частая проблема - люфт в рулевой рейке справа.</p>
@@ -370,7 +370,7 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" src="./images/work-image-3.jpg" alt="Toyota Avensis 1.8">
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-3.jpg" alt="Toyota Avensis 1.8">
               <h3 class="work-list__item-title">Toyota Avensis 1.8</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Выполнили плановое техническое обслуживание!</p>
@@ -382,7 +382,7 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" src="./images/work-image-4.jpg" alt="Skoda Fabia 1.2">
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-4.jpg" alt="Skoda Fabia 1.2">
               <h3 class="work-list__item-title">Skoda Fabia 1.2</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Заменили комплект цепи ГРМ.</p>
@@ -394,7 +394,7 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" src="./images/work-image-5.jpg" alt="Skoda Octavia">
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-5.jpg" alt="Skoda Octavia">
               <h3 class="work-list__item-title">Skoda Octavia</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Диагностика ходовой части с последующей заменой рулевого наконечника.
@@ -402,21 +402,21 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" src="./images/work-image-6.jpg" alt="Skoda Octavia">
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-6.jpg" alt="Skoda Octavia">
               <h3 class="work-list__item-title">Skoda Octavia</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Замена насоса охлаждающей жидкости и его ремня.</p>
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" src="./images/work-image-7.jpg" alt="Audi A4">
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-7.jpg" alt="Audi A4">
               <h3 class="work-list__item-title">Audi A4</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Замена опор двигателя и передних наружных ШРУСов.</p>
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" src="./images/work-image-8.jpg" alt="Mazda CX-7">
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-8.jpg" alt="Mazda CX-7">
               <h3 class="work-list__item-title">Mazda CX-7</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Клиента беспокоил повышенный расход масла и сизый дым из выхлопной
@@ -432,7 +432,7 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" src="./images/work-image-9.jpg" alt="Audi A5">
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-9.jpg" alt="Audi A5">
               <h3 class="work-list__item-title">Audi A5</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Клиента беспокоил стук в задней части автомобиля в холодную погоду.</p>
@@ -441,7 +441,7 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" src="./images/work-image-10.jpg" alt="Volkswagen Touareg">
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-10.jpg" alt="Volkswagen Touareg">
               <h3 class="work-list__item-title">Volkswagen Touareg</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Замена пыльников передних наружных ШРУСов, пыльника шаровой нижнего
@@ -451,7 +451,7 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" src="./images/work-image-11.jpg" alt="Skoda Fabia">
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-11.jpg" alt="Skoda Fabia">
               <h3 class="work-list__item-title">Skoda Fabia</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Замена масла ДВС и фильтров.</p>
@@ -461,7 +461,7 @@
               </div>
             </li>
             <li class="work-list__item">
-              <img class="work-list__item-image" src="./images/work-image-12.jpg" alt="Skoda Octavia">
+              <img class="work-list__item-image" loading="lazy" src="./images/work-image-12.jpg" alt="Skoda Octavia">
               <h3 class="work-list__item-title">Skoda Octavia</h3>
               <div class="work-list__item-description">
                 <p class="work-list__item-text">Осмотр ходовой и поиск утечки ОЖ.</p>
@@ -486,7 +486,7 @@
         <p class="contacts__work">СБ - ВС -&gt; 09:00 - 18:00</p>
         <ul class="contacts__masters">
           <li class="contacts__master">
-            <img class="contacts__photo" src="./images/master-basalygin.jpg" alt="Басалыгин Иван, моторист" />
+            <img class="contacts__photo" src="./images/master-basalygin.jpg" alt="Басалыгин Иван, моторист">
             <p class="contacts__name">Басалыгин Иван</p>
             <p class="contacts__job">моторист</p>
             <a href="https://vk.com/ibasalygin" target="_blank" rel="noreferrer" class="contacts__connection">Сообщение
@@ -494,7 +494,7 @@
             <div class="contacts__connection contacts__connection_basalygin">Показать телефон</div>
           </li>
           <li class="contacts__master">
-            <img class="contacts__photo" src="./images/master-goncharov.jpg" alt="Гончаров Дмитрий, механик" />
+            <img class="contacts__photo" src="./images/master-goncharov.jpg" alt="Гончаров Дмитрий, механик">
             <p class="contacts__name">Гончаров Дмитрий</p>
             <p class="contacts__job">механик</p>
             <a href="https://vk.com/dimagonchrov" target="_blank" rel="noreferrer"
@@ -502,7 +502,7 @@
             <div class="contacts__connection contacts__connection_goncharov">Показать телефон</div>
           </li>
           <li class="contacts__master">
-            <img class="contacts__photo" src="./images/master-plisovskikh.jpg" alt="Плисовских Алексей, диагност" />
+            <img class="contacts__photo" src="./images/master-plisovskikh.jpg" alt="Плисовских Алексей, диагност">
             <p class="contacts__name">Плисовских Алексей</p>
             <p class="contacts__job">диагност</p>
             <a href="https://vk.com/shifer96" target="_blank" rel="noreferrer" class="contacts__connection">Сообщение в
@@ -516,7 +516,7 @@
       <h2 class="section__title">СХЕМА ПРОЕЗДА</h2>
       <h3 class="map__title">Адрес: г.&nbsp;Челябинск, ул.&nbsp;Монтажников,&nbsp;1/3 (ЧМЗ)</h3>
       <div class="map__container">
-        <iframe class="map__iframe"
+        <iframe class="map__iframe" loading="lazy"
           src="https://yandex.ru/map-widget/v1/?um=constructor%3Af18f2eea116729dbc3556794464d62904adf8e51d636984e93f675d2d8e12216&amp;source=constructor"></iframe>
       </div>
     </section>
